--- a/src/pages/Shop.scss
+++ b/src/pages/Shop.scss
@@ -1,57 +1,3 @@
-.shop-card {
-  border: none;
-  border-radius: 1rem;
-  position: relative;
-  cursor: pointer;
-  transition: all 0.3s ease-out;
-
-  &:hover .card-button {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: all;
-  }
-}
-
-.card-content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.card-button {
-  position: absolute;
-  bottom: 20%;
-  left: 50%;
-  transform: translateX(-50%) translateY(0);
-  font-size: 1.6rem;
-  text-transform: uppercase;
-  width: 80%;
-  padding: 0.5rem 0;
-  background-color: rgba(238, 238, 238, 0.7);
-  outline: none;
-  border: none;
-  color: #000;
-  transition: all 0.3s ease-out;
-
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
-  }
-
-  &:focus,
-  &:active {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-  }
-
-  &:active {
-    transform: translateX(-50%) translateY(2px);
-  }
-
-  // 770px to make it work untill iPad width
-  @media only screen and (min-width: 48.125em) {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-  }
+.shop-container {
+  margin-top: 2rem;
 }
