--- a/src/componenets/SignIn.scss
+++ b/src/componenets/SignIn.scss
@@ -4,6 +4,8 @@ $color-dark-grey: #222;
 .sign-in {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+
   h2 {
     font-size: 1.6rem;
     font-weight: 700;
@@ -12,5 +14,21 @@ $color-dark-grey: #222;
   span {
     font-size: 1.4rem;
     font-weight: 300;
+  }
+}
+
+.btn-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 35rem;
+
+  & > :first-child {
+    margin-right: 2rem;
+
+    // 768px
+    @media only screen and (min-width: 48em) {
+      margin-right: 0;
+    }
   }
 }
