--- a/src/componenets/componenets-jsx/Header.scss
+++ b/src/componenets/componenets-jsx/Header.scss
@@ -7,6 +7,14 @@
 
   &__item {
     margin: 1rem 0;
+    font-size: 1.8rem;
+    color: #333;
+    font-weight: 300;
+    cursor: pointer;
+
+    &:hover {
+      color: #777;
+    }
 
     @media only screen and (min-width: 37.5em) {
       margin: 0 1rem;
@@ -15,12 +23,10 @@
 
   // 634px (before mobile nav)
   a {
-    font-size: 1.8rem;
-    color: #333;
-    font-weight: 300;
+    color: inherit;
   }
   a:hover {
     text-decoration: none;
-    color: #777;
+    color: inherit;
   }
 }
