--- a/src/componenets/componenets-jsx/CustomButton.scss
+++ b/src/componenets/componenets-jsx/CustomButton.scss
@@ -2,12 +2,17 @@ $color-black: #000;
 $color-white: #fff;
 
 .custom-button {
-  font-size: 1.4rem;
-  padding: 1rem 2rem;
+  font-size: 1.2rem;
+  padding: 0.8rem 1.6rem;
   text-transform: uppercase;
   transition: all 0.3s ease-out;
   border: 1px solid transparent;
   transform: translateY(0);
+
+  @media only screen and (min-width: 25em) {
+    font-size: 1.4rem;
+    padding: 1rem 2rem;
+  }
 
   @media only screen and (min-width: 62em) {
     font-size: 1.6rem;
