--- a/src/componenets/SignIn.scss
+++ b/src/componenets/SignIn.scss
@@ -4,8 +4,7 @@ $color-dark-grey: #222;
 .sign-in {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
+  align-items: flex-start;
 
   h2 {
     font-size: 1.6rem;
