--- a/src/componenets/componenets-jsx/Header.scss
+++ b/src/componenets/componenets-jsx/Header.scss
@@ -16,7 +16,8 @@
       color: #777;
     }
 
-    @media only screen and (min-width: 37.5em) {
+    // 576px
+    @media only screen and (min-width: 36em) {
       margin: 0 1rem;
     }
   }
