--- a/src/componenets/componenets-jsx/CustomButton.scss
+++ b/src/componenets/componenets-jsx/CustomButton.scss
@@ -2,8 +2,8 @@ $color-black: #000;
 $color-white: #fff;
 
 .custom-button {
-  font-size: 1.2rem;
-  padding: 0.8rem 1.6rem;
+  font-size: 1rem;
+  padding: 0.8rem;
   text-transform: uppercase;
   transition: all 0.3s ease-out;
   border: 1px solid transparent;
