--- a/src/componenets/SignIn.scss
+++ b/src/componenets/SignIn.scss
@@ -4,8 +4,15 @@ $color-dark-grey: #222;
 .sign-in {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   width: 100%;
+
+  // 768px
+  @media only screen and (min-width: 48em) {
+    margin-top: 0;
+    padding-left: 2rem;
+    align-items: flex-start;
+  }
 
   h2 {
     font-size: 1.6rem;
@@ -34,6 +41,7 @@ $color-dark-grey: #222;
     // 768
     @media only screen and (min-width: 48em) {
       width: 100%;
+      margin-right: 2rem;
     }
   }
 }
