--- a/src/componenets/SignUp.scss
+++ b/src/componenets/SignUp.scss
@@ -1,3 +1,49 @@
 .sign-up {
-  width: 35rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: 6rem;
+
+  // 768
+  @media only screen and (min-width: 48em) {
+    margin-top: 0;
+    padding-right: 2rem;
+    align-items: flex-start;
+  }
+
+  h2 {
+    font-size: 1.6rem;
+    font-weight: 700;
+  }
+
+  span {
+    font-size: 1.4rem;
+    font-weight: 300;
+  }
+
+  &__form {
+    text-align: center;
+    width: 100%;
+
+    // 440px
+    @media only screen and (min-width: 27.5em) {
+      width: 80%;
+    }
+
+    // 576
+    @media only screen and (min-width: 36em) {
+      width: 90%;
+    }
+
+    // 768
+    @media only screen and (min-width: 48em) {
+      width: 100%;
+    }
+  }
+
+  button {
+    margin-right: auto;
+    display: block;
+  }
 }
