--- a/src/componenets/SignIn.scss
+++ b/src/componenets/SignIn.scss
@@ -48,7 +48,7 @@ $color-dark-grey: #222;
 
 .btn-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
 
   // 440px
@@ -64,6 +64,7 @@ $color-dark-grey: #222;
   // 768
   @media only screen and (min-width: 48em) {
     width: 100%;
+    justify-content: space-between;
   }
 
   & > :first-child {
