--- a/src/componenets/componenets-jsx/CollectionPreview.scss
+++ b/src/componenets/componenets-jsx/CollectionPreview.scss
@@ -1,3 +1,9 @@
+.shop-title {
+  font-weight: 300;
+  font-size: 2.5rem;
+  margin-top: 1em;
+}
+
 .shop-card {
   border: none;
   border-radius: 1rem;
@@ -5,7 +11,7 @@
   cursor: pointer;
   transition: all 0.3s ease-out;
 
-  &:hover .card-button {
+  &:hover &__button {
     opacity: 1;
     visibility: visible;
     pointer-events: all;
@@ -15,75 +21,53 @@
   @media only screen and (min-width: 36em) {
     margin-bottom: 2rem;
   }
-}
 
-.shop-title {
-  font-weight: 300;
-  font-size: 2.5rem;
-  margin-top: 1em;
-}
+  &__img-container {
+    // 576 (the width when images takes 100% of the row width)
+    @media only screen and (min-width: 36em) {
+      height: 35rem;
+    }
+    // 992px biggest breakpoint
+    @media only screen and (min-width: 62em) {
+      height: 30rem;
+    }
 
-.img-container {
-  // 576 (the width when images takes 100% of the row width)
-  @media only screen and (min-width: 36em) {
-    height: 35rem;
-
-    & img {
-      height: 100%;
+    // for large screens
+    @media only screen and (min-width: 80rem) {
+      height: 35rem;
     }
   }
 
-  // 992px biggest breakpoint
-  @media only screen and (min-width: 62em) {
-    height: 30rem;
+  // 576 (the width when images takes 100% of the row width)
+  &__img-container img {
+    @media only screen and (min-width: 36em) {
+      height: 100%;
+    }
+  }
+  &__content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
-  // for large screens
-  @media only screen and (min-width: 80rem) {
-    height: 35rem;
-  }
-}
+  &__button {
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    width: 80%;
+    // to over write the customButton transfrom
+    transform: translateX(-50%) !important;
 
-.card-content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.card-button {
-  position: absolute;
-  bottom: 20%;
-  left: 50%;
-  transform: translateX(-50%) translateY(0);
-  font-size: 1.6rem;
-  text-transform: uppercase;
-  width: 80%;
-  padding: 0.5rem 0;
-  background-color: rgba(238, 238, 238, 0.7);
-  outline: none;
-  border: none;
-  color: #000;
-  transition: all 0.3s ease-out;
-
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
+    // 770px to make it work untill iPad width
+    @media only screen and (min-width: 48.125em) {
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
   }
 
-  &:focus,
-  &:active {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-  }
-
-  &:active {
-    transform: translateX(-50%) translateY(2px);
-  }
-
-  // 770px to make it work untill iPad width
-  @media only screen and (min-width: 48.125em) {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+  &__button:active {
+    // to over write the customButton transfrom
+    transform: translateY(2px) translateX(-50%) !important;
   }
 }
