--- a/src/componenets/componenets-jsx/CartDropdown.scss
+++ b/src/componenets/componenets-jsx/CartDropdown.scss
@@ -40,11 +40,9 @@
     width: 60%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-  }
-
-  &__content:first-child {
-    font-weight: 700;
+    margin-left: 2rem;
+    font-size: 1.2rem;
   }
 }
