--- a/src/componenets/componenets-jsx/CartDropdown.scss
+++ b/src/componenets/componenets-jsx/CartDropdown.scss
@@ -9,11 +9,18 @@
   padding: 1rem;
   transition: all 0.3s ease-out;
 
-  .cart-items {
+  &__items {
     display: flex;
     flex-direction: column;
     overflow: scroll;
     height: 28rem;
+  }
+
+  &__items span {
+    text-align: center;
+    font-size: 1.6rem;
+    margin-top: 2rem;
+    text-transform: capitalize;
   }
 
   button {
@@ -23,19 +30,18 @@
     margin-top: 0.5rem;
     width: 90%;
   }
-}
-.cart-item {
-  width: 100%;
-  height: 8rem;
-  display: flex;
-  margin-bottom: 1rem;
-
-  &__img {
+  &__item {
+    width: 100%;
+    height: 8rem;
+    display: flex;
+    margin-bottom: 1rem;
+  }
+  &__item--img {
     width: 40%;
     height: 100%;
   }
 
-  &__content {
+  &__item--content {
     height: 100%;
     width: 60%;
     display: flex;
