--- a/src/componenets/componenets-jsx/CustomButton.scss
+++ b/src/componenets/componenets-jsx/CustomButton.scss
@@ -41,11 +41,13 @@ $color-white: #fff;
   }
 
   &__check-out {
-    background-color: rgba($color-black, 0.7);
+    background-color: rgba($color-white, 0.6);
+    color: $color-black;
+    padding: 1rem 2rem;
   }
 
   &__check-out:hover {
-    background-color: rgba($color-white, 0.6);
-    color: $color-black;
+    background-color: rgba($color-black, 0.7);
+    color: $color-white;
   }
 }
