--- a/src/pages/checkout.scss
+++ b/src/pages/checkout.scss
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: 2rem;
 
     // 500px
     @media only screen and (min-width: 31.25em) {
@@ -39,6 +40,10 @@
     }
   }
 
+  &__header span:first-of-type {
+    text-align: left;
+  }
+
   &__header span:last-of-type {
     text-align: right;
   }
@@ -60,11 +65,11 @@
     // 500px
     @media only screen and (min-width: 31.25em) {
       width: 90%;
+      font-size: 1.6rem;
     }
     // 900px
     @media only screen and (min-width: 56.25em) {
       width: 60%;
-      font-size: 1.6rem;
     }
   }
 
