custom button works on page and collection pages and editing aalign items on signup page

--- a/src/componenets/componenets-jsx/ShowCollection.scss
+++ b/src/componenets/componenets-jsx/ShowCollection.scss
@@ -22,7 +22,7 @@
   transition: all 0.3s ease-out;
   height: 100%;
 
-  &:hover &__button {
+  &:hover button {
     opacity: 1;
     visibility: visible;
     pointer-events: all;
