--- a/src/pages/signinSignup.scss
+++ b/src/pages/signinSignup.scss
@@ -4,15 +4,16 @@
   justify-content: center;
   flex-direction: column;
 
-  // 992px
-  @media only screen and (min-width: 62em) {
-    flex-direction: row;
-    justify-content: space-evenly;
-  }
-
   // 768px
   @media only screen and (min-width: 48em) {
     flex-direction: row;
     justify-content: space-around;
+    align-items: flex-start;
+    margin-top: 7rem;
+  }
+  // 992px
+  @media only screen and (min-width: 62em) {
+    flex-direction: row;
+    justify-content: space-evenly;
   }
 }
